--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "maniascript-parser",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Simple langauge parser, created by following this amazing guide: ",
-  "main": "index.js",
+  "main": "test/index.js",
   "dependencies": {
     "chalk": "^1.1.3",
     "cli-spinner": "^0.2.6",
@@ -17,8 +17,8 @@
     "url": "git+https://github.com/MattMcFarland/h-parse.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Matt McFarland<contact@mattmcfarland.com>",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/MattMcFarland/h-parse/issues"
   },
