--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "maniascript-parser",
   "version": "0.0.0",
-  "description": "Simple langauge parser, created by following this amazing guide: ",
+  "description": "AST Parse ManiaScript CPP head file",
   "main": "test/index.js",
   "dependencies": {
     "chalk": "^1.1.3",
@@ -14,13 +14,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MattMcFarland/h-parse.git"
+    "url": "git+https://github.com/MattMcFarland/maniascript-parser.git"
   },
   "keywords": [],
   "author": "Matt McFarland<contact@mattmcfarland.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/MattMcFarland/h-parse/issues"
+    "url": "https://github.com/MattMcFarland/maniascript-parser/issues"
   },
-  "homepage": "https://github.com/MattMcFarland/h-parse#readme"
+  "homepage": "https://github.com/MattMcFarland/maniascript-parser#readme"
 }
