--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "test/index.js",
   "dependencies": {
     "chalk": "^1.1.3",
-    "cli-spinner": "^0.2.6",
-    "tokenizer": "^1.1.2"
+    "cli-spinner": "^0.2.6"
   },
   "devDependencies": {},
   "scripts": {
